// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.almsetting;

option java_package = "org.sonarqube.ws";
option java_outer_classname = "AlmSettings";
option optimize_for = SPEED;

// WS api/alm_settings/list_definitions
message ListDefinitionsWsResponse {
  repeated AlmSettingGithub github = 1;
  repeated AlmSettingAzure azure = 2;
  repeated AlmSettingBitbucket bitbucket = 3;
  repeated AlmSettingGitlab gitlab = 4;
  repeated AlmSettingBitbucketCloud bitbucketcloud = 5;
}

message AlmSettingGithub {
  optional string key = 1;
  optional string url = 2;
  optional string appId = 3;
  optional string privateKey = 4;
  optional string clientId = 5;
  optional string clientSecret = 6;
}

message AlmSettingAzure {
  optional string key = 1;
  optional string personalAccessToken = 2;
  optional string url = 3;
}

message AlmSettingBitbucket {
  optional string key = 1;
  optional string url = 2;
  optional string personalAccessToken = 3;
}

message AlmSettingBitbucketCloud {
  optional string key = 1;
  optional string clientId = 2;
  optional string clientSecret = 3;
  optional string workspace = 4;
}

message AlmSettingGitlab {
  optional string key = 1;
  optional string personalAccessToken = 2;
  optional string url = 3;
}

// WS api/alm_settings/get_binding
message GetBindingWsResponse {
  optional string key = 1;
  optional Alm alm = 2;
  optional string repository = 3;
  optional string url = 4;
  optional string slug = 5;
  optional bool summaryCommentEnabled = 6;
  optional bool monorepo = 7;
  optional bool inlineAnnotationsEnabled = 8;
}

enum Alm {
  github = 0;
  azure = 1;
  bitbucket = 2;
  gitlab = 3;
  bitbucketcloud = 4;
}

// WS api/alm_settings/list
message ListWsResponse {
  repeated AlmSetting almSettings = 1;
}

message AlmSetting {
  optional string key = 1;
  optional Alm alm = 2;
  optional string url = 3;
}

// WS api/alm_settings/count_binding
message CountBindingWsResponse {
  optional string key = 1;
  optional int64 projects = 2;
}
